# aseba

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  Brewfile  CMakeLists.txt  Doxyfile  Jenkinsfile  Makefile.all  Makefile.arm  Makefile.native  Makefile.pic30  ParseVersion.cmake  VERSION.txt  asebamedulla.sh  authors.md  authors.txt  changelog.md  compile.Linux.md  compile.Windows.md  compile.deps.md  compile.macOS.md  contributing.md  do-cmake.sh  localization.md  porting.txt  readme.md  readme.sourcetree.md  readme.txt  roadmap.txt
aseba/clients/: CMakeLists.txt
aseba/common/: CMakeLists.txt  authors.h  consts.h  productids.h  types.h  version.cpp.tpl
aseba/compiler/: CMakeLists.txt  analysis.cpp  compiler.cpp  compiler.h  errors.cpp  errors_code.h  identifier-lookup.cpp  lexer.cpp  parser.cpp  power-of-two.h  tree-build.cpp  tree-dump.cpp  tree-emit.cpp  tree-expand.cpp  tree-optimize.cpp  tree-typecheck.cpp  tree.h
aseba/vm/: CMakeLists.txt  natives.c  natives.h  vm.c  vm.h
can/: Makefile  (+2 more)
clients/: CMakeLists.txt
clients/cmd/: CMakeLists.txt  cmd.cpp
clients/dump/: CMakeLists.txt  dump.cpp
clients/eventlogger/: CMakeLists.txt  eventlogger.cpp
clients/exec/: exec.cpp
clients/joy/: CMakeLists.txt  asebajoy.cpp  joy-events.aesl
clients/massloader/: CMakeLists.txt  massloader.cpp
clients/python-dbus/: aseba.py  setup.py
clients/replay/: CMakeLists.txt  play.cpp  rec.cpp
clients/studio/: AeslEditor.cpp  AeslEditor.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  ConfigDialog.cpp  ConfigDialog.h  CustomDelegate.cpp  CustomDelegate.h  CustomWidgets.cpp  CustomWidgets.h  DashelTarget.cpp  DashelTarget.h  EventViewer.cpp  EventViewer.h  FindDialog.cpp  FindDialog.h  HelpViewer.cpp  HelpViewer.h  MainWindow.cpp  MainWindow.h  ModelAggregator.cpp  ModelAggregator.h  NamedValuesVectorModel.cpp  NamedValuesVectorModel.h  Plugin.cpp  Plugin.h  PluginRegistry.cpp  PluginRegistry.h  StudioAeslEditor.cpp  StudioAeslEditor.h  Target.cpp  Target.h  TargetModels.cpp  TargetModels.h  ThymioVPLStandalone.cpp  ThymioVPLStandalone.h  aseba-doc.qch  aseba-doc.qhc  asebastudio.qrc  (+33 more)
clients/thymioupdater/: CMakeLists.txt  ThymioUpdater.cpp  ThymioUpdater.h  thymioupdater_fr.qm  thymioupdater_fr.ts  thymioupdater_it.qm
clients/thymioupgrader/: CMakeLists.txt  ThymioUpgrader.cpp  ThymioUpgrader.h  thymioupgrader.qrc  thymioupgrader_de.qm  thymioupgrader_de.ts  thymioupgrader_el.qm  thymioupgrader_el.ts  thymioupgrader_es.qm  thymioupgrader_es.ts  thymioupgrader_fr.qm  thymioupgrader_fr.ts  thymioupgrader_it.qm  thymioupgrader_it.ts  thymioupgrader_ja.ts  thymioupgrader_tl.ts  thymioupgrader_zh.ts
clients/thymiownetconfig/: CMakeLists.txt  ThymioWNetConfig.cpp  ThymioWNetConfig.h  thymiownetconfig-cli.c  thymiownetconfig.qrc  thymiownetconfig_de.qm  thymiownetconfig_de.ts  thymiownetconfig_el.qm  thymiownetconfig_el.ts  thymiownetconfig_es.qm  thymiownetconfig_es.ts  thymiownetconfig_fr.qm  thymiownetconfig_fr.ts  thymiownetconfig_it.qm  thymiownetconfig_it.ts  thymiownetconfig_ja.qm  thymiownetconfig_ja.ts  thymiownetconfig_tr.ts  thymiownetconfig_zh.ts
common/: CMakeLists.txt  authors.h  consts.h  productids.h  types.h
common/about/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  asebaqtabout.qrc  qtabout_de.ts  qtabout_el.qm  qtabout_el.ts  qtabout_es.ts  qtabout_fr.qm  qtabout_fr.ts  qtabout_it.qm  qtabout_it.ts  qtabout_ja.ts  qtabout_zh.qm  qtabout_zh.ts
common/msg/: NodesManager.cpp  NodesManager.h  TargetDescription.cpp  TargetDescription.h  descriptions-manager.cpp  descriptions-manager.h  endian.h  msg.cpp  msg.h
common/utils/: BootloaderInterface.cpp  BootloaderInterface.h  FormatableString.cpp  FormatableString.h  HexFile.cpp  HexFile.h  utils.cpp  utils.h
common/zeroconf/: CMakeLists.txt  target.cpp  txtrecord.cpp  zeroconf-dashelhub.cpp  zeroconf-dashelhub.h  zeroconf-qt.cpp  zeroconf-qt.h  zeroconf-thread.cpp  zeroconf-thread.h  zeroconf.cpp  zeroconf.h
compiler/: CMakeLists.txt  Makefile  analysis.cpp  compiler.cpp  compiler.h  errors.cpp  errors_code.h  identifier-lookup.cpp  lexer.cpp  parser.cpp  power-of-two.h  sync_translation.py  tree-build.cpp  tree-dump.cpp  tree-emit.cpp  tree-expand.cpp  tree-optimize.cpp  tree-typecheck.cpp  tree.h
enki/: AsebaMarxbot.cpp  AsebaMarxbot.h  CMakeLists.txt  EnkiTest.cpp  Makefile  asebaenki.pro  marxbot-obstacle-avoidance.aesl
eventlogger/: CMakeLists.txt  eventlogger.cpp
examples/: CMakeLists.txt  readme.md
examples/clients/: CMakeLists.txt  readme.md
medulla/: CMakeLists.txt  medulla.cpp  medulla.h  test-medulla.py
replay/: CMakeLists.txt  play.cpp  rec.cpp
studio/: AeslEditor.cpp  AeslEditor.h  AsebaTarget.cpp  AsebaTarget.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  CompilerTranslator.cpp  CompilerTranslator.h  ConfigDialog.cpp  ConfigDialog.h  CustomDelegate.cpp  CustomDelegate.h  CustomWidgets.cpp  CustomWidgets.h  DashelTarget.cpp  DashelTarget.h  EventViewer.cpp  EventViewer.h  FindDialog.cpp  FindDialog.h  FunctionParametersDialog.cpp  FunctionParametersDialog.h  HelpViewer.cpp  HelpViewer.h  LocalVirtualMachine.cpp  LocalVirtualMachine.h  MainWindow.cpp  MainWindow.h  Makefile  ModelAggregator.cpp  ModelAggregator.h  NamedValuesVectorModel.cpp  NamedValuesVectorModel.h  Plugin.cpp  Plugin.h  PluginRegistry.cpp  PluginRegistry.h  RemoteBluetoothTarget.cpp  RemoteBluetoothTarget.h  (+42 more)
tests/: CMakeLists.txt  README  aseba-test-natives-count.cpp  asebatest.cpp  asebatestcompile.cpp  asebatestcompilerun.cpp  asebavmdummycallbacks.cpp  http-valgrind-macosx.supp  patch-script.cmake  patch-script.perl  run-test-asebahttp.sh  run-test-asebahttp.sh.in  simulateuser.py  test-http.cpp  test_sort.cpp  testdata-HttpRequest.txt  valgrind.py
thymioflasher/: CMakeLists.txt  ThymioFlasher.cpp  ThymioFlasher.h  thymioflasher.qrc  thymioflasher_de.qm  thymioflasher_de.ts  thymioflasher_es.qm  thymioflasher_es.ts  thymioflasher_fr.qm  thymioflasher_fr.ts  thymioflasher_it.qm  thymioflasher_it.ts
vm/: CMakeLists.txt  Makefile  natives.c  natives.h  vm.c  vm.h
(+1271 files in other folders)
